--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
+
+<head>
+    <meta charset=utf-8>
     <title>vue-tutorial</title>
-    <style>
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
+    <style></style>
+    <link href=./static/css/app.487ec6c75b22903902228ce58d3b5b2a.css rel=stylesheet>
+</head>
 
-    <!-- built files will be auto injected -->
-  </body>
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=./static/js/manifest.7d94964ca40e6eed3186.js></script>
+    <script type=text/javascript src=./static/js/vendor.e5969a5427fc37813dd6.js></script>
+    <script type=text/javascript src=./static/js/app.684730acbfbd4c05cad2.js></script>
+</body>
+
 </html>
-
