--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>vue-tutorial</title><style></style><link href=/static/css/app.487ec6c75b22903902228ce58d3b5b2a.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.88ac3c594ac15192a574.js></script><script type=text/javascript src=/static/js/vendor.e5969a5427fc37813dd6.js></script><script type=text/javascript src=/static/js/app.831ac87065f52315baaa.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
+  <title>SmallCloud</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="/dist/build.js"></script>
+</body>
+
+</html>
