--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
-  <title>SmallCloud</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script src="dist/build.js"></script>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title>site</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
